# touka

./: CMakeLists.txt  LICENSE  Makefile
doc/: example.game  handbook.txt
src/: curses.c  curses.h  game.c  game.h  input.c  input.h  log.c  log.h  main.c  main.h  misc.c  misc.h  parser.c  parser.h  quit.c  quit.h  save.c  save.h  touka.h  util.c  util.h  utility.c  utility.h
src/data/: darray.c  darray.h  hashmap.c  hashmap.h  linkedlist.c  linkedlist.h  list.c  list.h
src/i18n/: english.c  i18n.h
stuff/: example.game
